fix extra spaces

--- a/src/blocks/footer.css
+++ b/src/blocks/footer.css
@@ -3,7 +3,7 @@
   bottom: 0;
   width: 100%;
   text-align: center;
-  padding: 7px 29px 47px 40px;
+  padding: 20px 0; 
   background: linear-gradient(135deg, #ff758c, #f17eb3, #ffb199);
   background-attachment: fixed;
   color: white;
