--- a/src/blocks/page.css
+++ b/src/blocks/page.css
@@ -1,3 +1,8 @@
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
 .page {
   margin: 0;
   padding: 0;
@@ -6,6 +11,7 @@
   background: linear-gradient(135deg, #ff758c, #ff7eb3, #fb199f);
   color: white;
   overflow-x: hidden;
+  width: 100vw;
 }
 
 @media screend and (max-width: 500px) {
